# aibp-autopilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: competitors.yaml  policy.stage.yaml  policy.yaml  rss_feeds.yaml  schema.sql
deploy/: README.md  stage8_enable_tracking.sh
deploy/systemd/: aibp-redirect.service
docker/: Dockerfile  docker-compose.yml
docs/: deploy_vps.md  install.md  updating.md
docs/adr/: 0001-self-learning-architecture.md  0002-direct-psycopg2.md  0003-single-server-deployment.md  0004-update-workflow.md  0005-engagement-collection-strategy.md  0006-sync-psycopg2-in-async-wontfix.md  0007-interleaving-experiments.md  0008-bayesian-decision-criterion.md  0009-rich-message-publishing.md  0010-composite-reward.md  0011-offers-catalog.md  0012-invite-link-attribution.md  README.md
docs/sessions/: telegram-content-cloud-sessions.md
docs/superpowers/plans/: 2026-07-08-issues-40-42-43.md
docs/superpowers/specs/: 2026-07-08-issues-40-42-43-design.md
prompts/: cron_morning_generation.md  cron_rss_collector.md  hermes_bootstrap.md
scripts/: bootstrap.py  check_feeds.py  rebuild_engagement_history.py  setup_postgres.sh  simulate_thresholds.py  update.sh
src/aibp/: __init__.py  cli.py
src/aibp/collectors/: __init__.py  rss_collector.py
src/aibp/db/: __init__.py  connection.py  init_db.py  migrate.py
tests/: __init__.py  conftest.py
tests/fixtures/: tme_s_sample.html
tests/integration/: test_self_learning_cycle.py
tests/unit/: __init__.py  test_approvals.py  test_audience_relevance.py  test_bandit.py  test_cheap_routing.py  test_competitor_dedup.py  test_competitor_scraper.py  test_cta.py  test_dashboard_bandit.py  test_decision_engine.py  test_embed.py  test_engagement_collector.py  test_experiment_power.py  test_generation_retry.py  test_growth.py  test_image_gen.py  test_interleave.py  test_llm_editor.py  test_morning_hashtag.py  test_native_elements.py  test_offers.py  test_policy_and_selection.py  test_publisher_rich_message.py  test_quality_gate.py  test_redirect_healthcheck.py  test_redirect_service.py  test_reward.py  test_rss_collector.py  test_safety.py  test_select_candidate_exclude_ids.py  test_simulate_thresholds.py  test_snapshot_horizon.py  test_telegram_lock.py  test_tiers.py  test_traffic_sources.py  test_weekly_case.py  test_weekly_digest.py
(+50 files in other folders)
