[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibp-autopilot"
version = "0.1.0"
description = "Autopilot for @AI_Business_Pulse Telegram channel"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
aibp = "aibp.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aibp = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
# Ignore: N802 function names (we use snake_case, but some TG callbacks differ)
#         B905 zip-strict (added in Python 3.10, fine to omit)
ignore = ["N802", "B905"]

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports for fixtures, longer lines for setup
"tests/**/*.py" = ["E501", "F401"]
# __init__. files can be empty or have re-exports
"**/__init__.py" = ["F401"]
# Pipeline files contain long Jinja2/LD prompts — line length is intentional
"src/aibp/enrichment/pipeline.py" = ["E501"]
"src/aibp/generation/pipeline.py" = ["E501"]
"src/aibp/self_learning/pattern_miner.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
